@@ -1,7 +1,9 @@
 3.8.1 - 13/02/2020
-FIxed:
+Fixed:
 - Bugfix double install packages from slack regular repo
   and patches directory #122
+Updated:
+- Removed status progress bar
 
 3.8.0 - 05/02/2020
 Added:
